discussion/kv_engine/185933/185933_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable history scan for CDC backfill

Replace the todo markers with code that now utilises the magma history
API - this now means scanAllVersions for example is hooked into the
magma history scanning API.

Add new tests that validate multiple versions can be stored and
returned.

Also required are changes to unit tests to respect new expectation
checks that occur in magma - primarily that flushing writes ordered
batches - this is only a problem for tests which bypass the flusher
and call KVStore directly.

Change-Id: Ife0bfaf6b0fb8dade115c879b96733c2b70b1e6f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-01 10:58:55.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-01 10:59:14.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/335586/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-01 11:32:48.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1003/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1003/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/990/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28: error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
                  kvstore->getHistoryStartSeqno(vbid).value_or(~0ull));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/990/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/990/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1188/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\magma-kvstore_test.cc(813): error C2039: "getHistoryStartSeqno": is not a member of "MockMagmaKVStore" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1188/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/983/ : FAILURE

Compile error at [2023-02-01T11:02:52.160Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/983/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1005/ : FAILURE

Compile error at [2023-02-01T11:04:48.010Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: ?class MockMagmaKVStore? has no member named ?getHistoryStartSeqno?; did you mean ?historyStartSeqno??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1005/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1003/ : FAILURE

Compile error at [2023-02-01T11:03:44.342Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1003/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1012/ : FAILURE

Compile error at [2023-02-01T11:03:20.560Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1012/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1306/ : FAILURE

Compile error at [2023-02-01T11:07:35.073Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:814:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1306/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/960/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22480/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1012/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
